<resources>
    <string name="app_name">eggert_hoppens_project2</string>
    <string name="otter_quest">Otter Quest</string>
    <string name="created_by_meagan_eggert_brandon_hoppens"><![CDATA[Created by: Meagan Eggert & Brandon Hoppens]]></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_in_to_play">Please Sign In To Play</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="test">Test</string>
    <string name="testButtonLabel">Note: This text and the following button will be invisible in the final product</string>
    <string name="please_sign_up_to_play">Please Sign Up to Play</string>
    <string name="view_scoreboard">View Scoreboard</string>
    <string name="settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="play_game">Play Game</string>
    <string name="category">Category</string>
    <string name="select_a_category">Select a Category</string>
    <string name="video_games">Video Games</string>
    <string name="sports">Sports</string>
    <string name="game_mode_category_label">Category:</string>
    <string name="no_category_passed">No Category Passed</string>
    <string name="game_mode">Game Mode</string>
    <string name="select_a_game_mode">Select a game mode.</string>
    <string name="zen">Zen</string>
    <string name="speed">Speed</string>
    <string name="compete">Compete</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="how_to_play">How To Play</string>
    <string name="quit">Quit</string>
    <string name="example_raven_question">Why is a raven like a writing desk?</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_play_title">How To Play</string>
    <string name="how_to_play_instructions">How To Play Instructions</string>
    <string name="medium">medium</string>
    <string name="easy">easy</string>
    <string name="hard">hard</string>
    <string name="difficultyLabel">Difficulty:</string>
    <string name="fuschia">Fuschia</string>
    <string name="lime_green">Lime Green</string>
    <string name="yellow">Yellow</string>
    <string name="other_answers_label">Other Answers:</string>
    <string name="blue">Blue</string>
    <string name="correct_answer_label">Correct Answer:</string>
    <string name="what_color_is_the_sky">What color is the sky?</string>
    <string name="question_label">Question:</string>
    <string name="video_games_sports_etc">Video Games, Sports, etc.</string>
    <string name="category_label">Category:</string>
    <string name="please_enter_the_question_details">Please enter the question details:</string>
    <string name="score">SCORE</string>
    <string name="testing">TESTING</string>
    <string name="_1">#1</string>
    <string name="confirm_question_to_delete">Confirm Question to Delete:</string>
    <string name="wrong_answers_label">Wrong Answers:</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password_label">New Password:</string>
    <string name="repeat_new_password_label">Repeat New Password:</string>
    <string name="submit">Submit</string>
    <string name="current_password_label">Current Password:</string>
    <string name="changing_password">Changing Password</string>
    <string name="fragment_test">Fragment Test</string>
    <string name="clear_all_scores">Clear All Scores</string>
    <string name="update_question_database">Update Question Database</string>
    <string name="update_user_accounts">Update User Accounts</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="delete_user">Delete User</string>
    <string name="update_users">Update Users</string>
    <string name="confirm_details_for_user_deletion">Confirm details for user deletion:</string>
    <string name="user_id_number">User ID Number:</string>
    <string name="enter_user_id_number">Enter User ID Number</string>
    <string name="view_user">View User</string>
    <string name="confirm_user_to_delete">Confirm User to Delete:</string>
    <string name="high_score">High Score:</string>
</resources>