<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayTitle_textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@color/design_default_color_secondary_variant"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/changing_password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentPasswordTitle_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/current_password_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/currentPassword_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/newPasswordTitle_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/new_password_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newPassword_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/repeatNewPasswordTitle_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/repeat_new_password_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/repeatNewPassword_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/changePasswordSubmit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:text="@string/submit"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>