<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameModeActivity">

    <include
        android:id="@+id/headerToolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/gameModeCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/game_mode_category_label"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerToolbar" />


    <TextView
        android:id="@+id/gameModePassedCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_category_passed"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/gameModeCategoryTextView"
        app:layout_constraintTop_toBottomOf="@+id/headerToolbar" />

    <TextView
        android:id="@+id/gameModeTitleTextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/game_mode"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerToolbar" />

    <TextView
        android:id="@+id/gameModeInstructionTextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeTitleTextView"
        android:gravity="center"
        android:text="@string/select_a_game_mode"
        android:textSize="15sp" />

    <Button
        android:id="@+id/gameModeFirstOptionButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeInstructionTextView"
        android:text="@string/zen"
        android:textSize="25sp" />

    <Button
        android:id="@+id/gameModeSecondOptionButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeFirstOptionButton"
        android:text="@string/speed"
        android:textSize="25sp" />

    <Button
        android:id="@+id/gameModeThirdOptionButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameModeSecondOptionButton"
        android:text="@string/compete"
        android:textSize="25sp" />


</androidx.constraintlayout.widget.ConstraintLayout>