<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header Toolbar -->
    <include
        android:id="@+id/headerToolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Main Title Text -->
    <TextView
        android:id="@+id/mainActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/otter_quest"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerToolbar"/>

    <!-- Instruction to Sign in Text -->
    <TextView
        android:id="@+id/signIn_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/please_sign_up_to_play"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_Title" />

    <!-- Play Game Button -->
    <Button
        android:id="@+id/play_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif-monospace"
        android:padding="10dp"
        android:text="@string/play_game"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_Title" />

    <!-- Scoreboard Button -->
    <Button
        android:id="@+id/scoreboard_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif-monospace"
        android:padding="10dp"
        android:text="@string/view_scoreboard"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_Button" />

    <!-- Settings Button -->
    <Button
        android:id="@+id/settings_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif-monospace"
        android:padding="10dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreboard_Button" />

    <!-- Settings Button -->
    <Button
        android:id="@+id/adminSettings_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif-monospace"
        android:padding="10dp"
        android:text="@string/admin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_Button" />

    <!-- Test/Debug Note Text -->
    <TextView
        android:id="@+id/test_textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="12dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/testButtonLabel"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/adminSettings_Button"
        app:layout_wrapBehaviorInParent="horizontal_only" />

    <!-- Test/Debug Button -->
    <Button
        android:id="@+id/test_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_textView" />

    <!-- Test Result Text -->
    <TextView
        android:id="@+id/testResult_textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/test_Button"
        app:layout_wrapBehaviorInParent="horizontal_only"
        tools:text="We're going to override this message" />

    <!-- Footer -->
    <TextView
        android:id="@+id/createdBy_Footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/created_by_meagan_eggert_brandon_hoppens"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>